--- a/_config.yml
+++ b/_config.yml
@@ -54,10 +54,15 @@ defaults:
       comments: false
       share: true
       related: true
+      show_date: true
   # _pages
   - scope:
       path: "_pages"
       type: pages
     values:
       layout: single
-      author_profile: true 
+      author_profile: true
+
+# Teaser image settings
+teaser:
+  thumbnail: thumbnail 
