--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,8 @@
 main:
   - title: "Home"
     url: /
+  - title: "Categories"
+    url: /categories/
   - title: "About"
     url: /about/
   - title: "Who Runs Bitcoin"
